src/test/deca/context/invalid/decaObjet/protected/00notSubClass1.deca
// Description:
//    test protected dans la doc
//
// Resultats:
//    00notSubClass1.lis
//
// Historique:
//    cree le 16/06/2022

class A {
    protected int x;
}
class X {
    void m(){
    A a = new A();
    println(a.x) ; // Erreur contextuelle : x est protege
    }
}